# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- **Limite de Mobs da Dungeon:** Cada nível tem um limite de `3` mobs a serem mortos

### Changed

- **Mudança em Monstros** de nível baixo
  - _1_: Dano base `12` -> `7`. Dano por Nível `4` -> `3`
  - _2_: Dano base `16` -> `8`. Experiência Base `16` -> `10`. Experiência por nível `6` -> `5`
  - _3_: Experiência base `40` -> `10`. Experiência por Nível `6` -> `3`.
  - _9_: Armarudra Base `40` -> `16`. Dano por Nível `13` -> `8`. Armadura por nível `5` -> `6`
- **Mudança em Custo de Items**
  - _4_: Valor `7` -> `6`
  - _5_: Valor `10` -> `9`. Valor Por nível `10` -> `6`
  - _6_: Valor `12` -> `11`. Valor por nível `7` -> `5`
- Tempo de Resposta ao final da Dungeon foi de `15s` -> `25s`

## [4.0.A-BETA] - 2022-02-06

### Added

- Nome para os Inimigos `9` e `10`

### Changed

- Mana por nível das classes `Mago` e `Arquimago` foi aumentado de `10` para `15`
- Mana Base das classes `Mago`, `Arquimago`, `Domador`, `Necromante`, `Feiticeiro` e `Ilusionista` foi aumentada de `50` para `60`
- Mana por nível da classe `Ilusionista` foii amentada de `8` para `10`
- **Habilidades:**
  - _Imbuir em Veveno_: Dano base `20` -> `40`. Escala com Inteligencia `50%` -> `80%`. Dano por Nível `30` -> `60`
  - _Golpes Destemidos_: Dano base `18` -> `34`. Escala com Inteligência `50%` -> `70%`
  - _Atrás de Você_: Dano base `17` -> `90`. Escala com Inteligência `50%` -> `80%`. Dano por Nível `50` -> `30`
  - _Golpe Desleal_: Dano Base `17` -> `50`. Escala com Inteligência `50%` -> `65%`. Cura por Nível `200` -> `100`
  - _Frenesi_: Dano Base `15` -> `90`, Escala com Inteligencia: `0%` -> `80%`